--- a/templates/application.plush.html
+++ b/templates/application.plush.html
@@ -4,19 +4,22 @@
 <head>
     <meta charset="utf-8">
     <title>Budget Tracker</title>
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/assets/css/application.css?v=4">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-        <a class="navbar-brand" href="/">Budget Tracker</a>
+        <a class="navbar-brand <%= if (current_user) { %>navbar-brand-centered<% } %>" href="/">Budget Tracker</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <%= if (current_user) { %>
                     <li class="nav-item">
-                        <span class="nav-link">
+                        <a class="nav-link" href="<%= userPath({ user_id: current_user.ID }) %>">
                             <%= current_user.Email %>
-                        </span>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/signout">Sign Out</a>
