--- a/templates/users/edit.plush.html
+++ b/templates/users/edit.plush.html
@@ -5,5 +5,22 @@
 <%= form_for(user, {action: userPath({ user_id: user.ID }), method: "PUT" }) { %>
     <%= f.InputTag("Email") %>
         <button class="btn btn-success" role="submit">Update</button>
-        <a href="<%= usersPath() %>" class="btn btn-warning">Cancel</a>
+        <a href="/" class="btn btn-secondary">Cancel</a>
         <% } %>
+
+            <hr />
+
+            <div class="card border-danger mt-4">
+                <div class="card-body text-danger">
+                    <h5 class="card-title">Danger Zone</h5>
+                    <p class="card-text">Once you delete your account, there is no going back. Please be certain.</p>
+
+                    <%= form({action: userPath({ user_id: user.ID }), method: "POST" , style: "display:inline;" }) { %>
+                        <input type="hidden" name="_method" value="DELETE" />
+                        <button class="btn btn-danger"
+                            onclick="return confirm('Are you sure you want to delete your account? This action cannot be undone.');">
+                            Delete Account
+                        </button>
+                        <% } %>
+                </div>
+            </div>
